--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -344,7 +344,7 @@ D'un point de vue des mécanismes de calcul, l'organisation d'une carte s'appare
 Ici, la forme de poids contextuels induit une activité contextuelle pseudo-périodique, de même forme que les poids contextuels, qui vient moduler l'activité externe au sein de l'activité globale. 
 L'alternance des valeurs hautes et basses dans cette activité contextuelle permet d'encoder en une même valeur, à savoir le BMU $\bmu$, à la fois l'entrée externe $\inpx$ et l'entrée contextuelle $\inpc$. Cette modulation émerge de la dynamique d'apprentissage des cartes.
 
-\section{Génération de modalité dans des architectures de trois cartes 1D}\label{sec:pred}
+\section{Génération de modalité dans des architectures de trois cartes}\label{sec:pred}
 
 
 Nous avons vu que dans une architecture de deux cartes, chaque carte encode la totalité du modèle d'entrées $U$ et non seulement son entrée externe. $U$ est donc encodé dans les deux cartes de l'architecture, apportant une redondance dans l'information apprise par l'architecture sur le modèle d'entrées.
