--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,10 +6,13 @@
 \ThesisUL
 % Jury:
 % \President = {Le président &du jury}
-\Rapporteurs = {Madalina Olteanu & Université Paris Dauphine, CEREMADE\\
-Frédéric Alexandre & INRIA Bordeaux Sud-Ouest, Labri\\}
-\Examinateurs = {Mathias Quoy & CY-Université Cergy\\
-Lydia Boudjeloud-Assala & Université de Lorraine, LORIA}
-\Encadrants = {Hervé Frezza-Buet & CentraleSupelec, LORIA\\
-Yann Boniface & Université de Lorraine, LORIA}
+\Rapporteurs = {Frédéric Alexandre & Directeur de Recherche, INRIA Bordeaux Sud-Ouest \\
+    Madalina Olteanu & Professeur, Université Paris Dauphine, CEREMADE\\
+\\}
+\Examinateurs = {
+    Lydia Boudjeloud-Assala & Maîtresse de conférence, Université de Lorraine, LORIA \\
+    Mathias Quoy & Professeur, CY-Université Cergy\\
+}
+\Directeur = {Hervé Frezza-Buet & Professeur à CentraleSupelec, LORIA}
+\CoDirecteur = {Yann Boniface & Maître de conférence, Université de Lorraine, LORIA}
 \MakeThesisTitlePage
