--- a/02-Architectures/biblio.bib
+++ b/02-Architectures/biblio.bib
@@ -54,7 +54,6 @@ Conclusion : quand on a des clusters bien séparés, ils sont mappés séparéme
 @inproceedings{wang_comparisonal_2007,
 	title = {A comparisonal study of the multi-layer {Kohonen} self-organizing feature maps for spoken language identification},
 	doi = {10.1109/ASRU.2007.4430146},
-	abstract = {Our previous research indicates that the multi-layer Kohonen self-organizing feature map (MLKSFM) gives a promising performance for spoken language identification (LID). In this paper, we enhance this approach in two distinct ways. Firstly, by considering the phase information, we propose a new type of feature vector which combines the modified group delay function (MODGDF) and the traditional MFCC. Secondly, we propose a hierarchical structure of the MLKSFM, in which the pre-classification is performed at the lower level MLKSFM and the final language identification is performed at the top level MLKSFM. For the OGI-TS speech corpus, the best LID rate is achieved at 87.3\% for the 45-sec test speech utterances by using the hierarchical MLKSFM with 4 classes pre-classified at the lower level MLKSFM. For the 10-sec test speech utterances, the best LID rated is achieved at 60.0\% by using the non-hierarchical MLKSFM LID system.},
 	booktitle = {2007 {IEEE} {Workshop} on {Automatic} {Speech} {Recognition} {Understanding} ({ASRU})},
 	author = {Wang, Liang and Ambikairajah, Eliathamby and Choi, Eric H.C.},
 	month = dec,
@@ -68,7 +67,6 @@ Conclusion : quand on a des clusters bien séparés, ils sont mappés séparéme
 @inproceedings{liu_deep_2015,
 	title = {Deep {Self}-{Organizing} {Map} for visual classification},
 	doi = {10.1109/IJCNN.2015.7280357},
-	abstract = {We proposed a Deep Self-Organizing Map (DSOM) algorithm which is completely different from the existing multi-layers SOM algorithms, such as SOINN. It consists of layers of alternating self-organizing map and sampling operator. The self-organizing layer is made up of certain numbers of SOMs, with each map only looking at a local region block on its input. The winning neuron's index value from every SOM in self-organizing layer is then organized in the sampling layer to generate another 2D map, which could then be fed to a second self-organizing layer. In this way, local information is gathered together, forming more global information in higher layers. The construction method of the DSOM is unique and will be introduced in this paper. Experiments were carried out to discuss how the DSOM architecture parameters affect the performance. We evaluate our proposed DSOM on MNIST and CASIA-HWDB1.1 dataset. Experimental results show that DSOM outperforms the original supervised SOM by 7:17\% on MNIST and 7:25\% on CASIA-HWDB1.1.},
 	booktitle = {2015 {International} {Joint} {Conference} on {Neural} {Networks} ({IJCNN})},
 	author = {Liu, Nan and Wang, Jinjun and Gong, Yihong},
 	month = jul,
@@ -81,7 +79,7 @@ Conclusion : quand on a des clusters bien séparés, ils sont mappés séparéme
 @article{lampinen_clustering_1992,
 	title = {Clustering {Properties} of {Hierarchical} {Self}-{Organizing} {Maps}},
 	volume = {2},
-	abstract = {A multilayer self-organizing map, HSOM, is discussed as an unsupervised clustering method. The HSOM is shown to form arbitrarily complex clusters, in analogy with multilayer feedforward networks. In addition, the HSOM provides a natural measure for the distance of a point from a cluster that weighs all the points belonging to the cluster appropriately.},
+	%abstract = {A multilayer self-organizing map, HSOM, is discussed as an unsupervised clustering method. The HSOM is shown to form arbitrarily complex clusters, in analogy with multilayer feedforward networks. In addition, the HSOM provides a natural measure for the distance of a point from a cluster that weighs all the points belonging to the cluster appropriately.},
 	language = {en},
 	journal = {Journal of Mathematical Imaging and Vision},
 	author = {Lampinen, Jouko and Oja, Erkki},
@@ -95,7 +93,7 @@ Conclusion : quand on a des clusters bien séparés, ils sont mappés séparéme
 	issn = {09521976},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0952197606001606},
 	doi = {10.1016/j.engappai.2006.09.005},
-	abstract = {Purely based on a hierarchy of self-organizing feature maps (SOMs), an approach to network intrusion detection is investigated. Our principle interest is to establish just how far such an approach can be taken in practice. To do so, the KDD benchmark data set from the International Knowledge Discovery and Data Mining Tools Competition is employed. Extensive analysis is conducted in order to assess the signiﬁcance of the features employed, the partitioning of training data and the complexity of the architecture. Contributions that follow from such a holistic evaluation of the SOM include recognizing that (1) best performance is achieved using a two-layer SOM hierarchy, based on all 41-features from the KDD data set. (2) Only 40\% of the original training data is sufﬁcient for training purposes. (3) The ‘Protocol’ feature provides the basis for a switching parameter, thus supporting modular solutions to the detection problem. The ensuing detector provides false positive and detection rates of 1.38\% and 90.4\% under test conditions; where this represents the best performance to date of a detector based on an unsupervised learning algorithm.},
+	%abstract = {Purely based on a hierarchy of self-organizing feature maps (SOMs), an approach to network intrusion detection is investigated. Our principle interest is to establish just how far such an approach can be taken in practice. To do so, the KDD benchmark data set from the International Knowledge Discovery and Data Mining Tools Competition is employed. Extensive analysis is conducted in order to assess the signiﬁcance of the features employed, the partitioning of training data and the complexity of the architecture. Contributions that follow from such a holistic evaluation of the SOM include recognizing that (1) best performance is achieved using a two-layer SOM hierarchy, based on all 41-features from the KDD data set. (2) Only 40\% of the original training data is sufﬁcient for training purposes. (3) The ‘Protocol’ feature provides the basis for a switching parameter, thus supporting modular solutions to the detection problem. The ensuing detector provides false positive and detection rates of 1.38\% and 90.4\% under test conditions; where this represents the best performance to date of a detector based on an unsupervised learning algorithm.},
 	language = {en},
 	number = {4},
 	urldate = {2021-07-09},
@@ -111,7 +109,7 @@ Conclusion : quand on a des clusters bien séparés, ils sont mappés séparéme
 	title = {Hierarchical {SOM} applied to image compression},
 	volume = {1},
 	doi = {10.1109/IJCNN.2001.939060},
-	abstract = {The increase of the need for image storage and transmission in computer systems has increased the importance of signal and image compression algorithms. The approach involving vector quantization (VQ) relies on the design of a finite set of codes which will substitute the original signal during transmission with a minimal of distortion, taking advantage of the spatial redundancy of image to compress them. Algorithms such as LBG and SOM work in an unsupervised way toward finding a good codebook for a given training data. However, the number of code vectors (N) needed for VQ increases with the vector dimension, and full-search algorithms such as LBG and SOM can lead to large training and coding times. An alternative for reducing the computational complexity is the use of a tree-structured vector quantization algorithm. This paper presents an application of a hierarchical SOM for image compression which reduces the search complexity from O(N) to O(log N), enabling a faster training and image coding. Results are given for conventional SOM, LBG and HSOM, showing the advantage of the proposed method.},
+	% = {The increase of the need for image storage and transmission in computer systems has increased the importance of signal and image compression algorithms. The approach involving vector quantization (VQ) relies on the design of a finite set of codes which will substitute the original signal during transmission with a minimal of distortion, taking advantage of the spatial redundancy of image to compress them. Algorithms such as LBG and SOM work in an unsupervised way toward finding a good codebook for a given training data. However, the number of code vectors (N) needed for VQ increases with the vector dimension, and full-search algorithms such as LBG and SOM can lead to large training and coding times. An alternative for reducing the computational complexity is the use of a tree-structured vector quantization algorithm. This paper presents an application of a hierarchical SOM for image compression which reduces the search complexity from O(N) to O(log N), enabling a faster training and image coding. Results are given for conventional SOM, LBG and HSOM, showing the advantage of the proposed method.},
 	booktitle = {{IJCNN}'01. {International} {Joint} {Conference} on {Neural} {Networks}. {Proceedings} ({Cat}. {No}.{01CH37222})},
 	author = {Barbalho, J.M. and Duarte, A. and Neto, D. and Costa, J.A.F. and Netto, M.L.A.},
 	month = jul,
@@ -418,7 +416,7 @@ Division d’une image en patches, qui seront ensuite combinés par une nouvelle
 	issn = {1551-3203, 1941-0050},
 	url = {https://ieeexplore.ieee.org/document/8669852/},
 	doi = {10.1109/TII.2019.2906083},
-	abstract = {The Deep Self-Organizing Map (DSOM) was introduced to embed hierarchical feature abstraction capability to SOMs. This paper presents an extended version of the original DSOM algorithm (E-DSOM). E-DSOM enhances the DSOM in two ways: 1) learning algorithm is modiﬁed to be completely unsupervised, and 2) architecture is modiﬁed to learn features of different resolution in hidden layers. E-DSOM has three main advantages over the original DSOM: 1) improved classiﬁcation accuracy, 2) improved generalization capability and 3) need of fewer sequential layers (reduced training time). E-DSOM was tested on benchmark and real-world datasets and was compared against DSOM, SOM, Stacked Autoencoder (AE), and Stacked Convolutional Autoencoder (CAE). Experimental results showed that the E-DSOM outperformed DSOM with improvements of classiﬁcation accuracy up to 15\% while saving training time up to 19\% on all datasets. Moreover, E-DSOM evidenced better generalization capability compared to the DSOM by showing superior performance on all datasets with induced noise. Further, E-DSOM showed comparable performance to the AE and the CAE while outperforming them on two datasets.},
+	%abstract = {The Deep Self-Organizing Map (DSOM) was introduced to embed hierarchical feature abstraction capability to SOMs. This paper presents an extended version of the original DSOM algorithm (E-DSOM). E-DSOM enhances the DSOM in two ways: 1) learning algorithm is modiﬁed to be completely unsupervised, and 2) architecture is modiﬁed to learn features of different resolution in hidden layers. E-DSOM has three main advantages over the original DSOM: 1) improved classiﬁcation accuracy, 2) improved generalization capability and 3) need of fewer sequential layers (reduced training time). E-DSOM was tested on benchmark and real-world datasets and was compared against DSOM, SOM, Stacked Autoencoder (AE), and Stacked Convolutional Autoencoder (CAE). Experimental results showed that the E-DSOM outperformed DSOM with improvements of classiﬁcation accuracy up to 15\% while saving training time up to 19\% on all datasets. Moreover, E-DSOM evidenced better generalization capability compared to the DSOM by showing superior performance on all datasets with induced noise. Further, E-DSOM showed comparable performance to the AE and the CAE while outperforming them on two datasets.},
 	language = {en},
 	number = {11},
 	urldate = {2022-07-18},
@@ -498,7 +496,7 @@ question: sur quels données de sortie des cartes apprennent les couches sup ? o
 
 @article{suganthan_pattern_2001,
 	title = {Pattern classification using multiple hierarchical overlapped self-organising maps},
-	abstract = {In this paper, we describe techniques for designing high-performance pattern classi"cation systems using multiple hierarchical overlapped self-organising maps (HOSOM) (Suganthan, Proceedings of the International Joint Conference on Neural Networks, WCCI'98, Alaska, 1998). The HOSOM model has one "rst level SOM and several partially overlapping second-level SOMs. With this overlap, every training and test sample is classi"ed by multiple second-level SOMs. Hence, the "nal classi"cation decision can be made by combining these multiple classi"cation decisions to obtain a better performance. In this paper, we use multiple HOSOMs and each HOSOM is trained on a distinct input feature set extracted from the same data set. Since one HOSOM yields multiple classi"cations, these multiple HOSOMs generate a large number of classi"cation decisions. To combine the individual classi"cations, we make use of the global winner as well as a winner for every class. Our experiments yielded a high recognition rate of 99.25\% on NIST19 numeral database. 2001 Pattern Recognition Society. Published by Elsevier Science Ltd. All rights reserved.},
+	%abstract = {In this paper, we describe techniques for designing high-performance pattern classi"cation systems using multiple hierarchical overlapped self-organising maps (HOSOM) (Suganthan, Proceedings of the International Joint Conference on Neural Networks, WCCI'98, Alaska, 1998). The HOSOM model has one "rst level SOM and several partially overlapping second-level SOMs. With this overlap, every training and test sample is classi"ed by multiple second-level SOMs. Hence, the "nal classi"cation decision can be made by combining these multiple classi"cation decisions to obtain a better performance. In this paper, we use multiple HOSOMs and each HOSOM is trained on a distinct input feature set extracted from the same data set. Since one HOSOM yields multiple classi"cations, these multiple HOSOMs generate a large number of classi"cation decisions. To combine the individual classi"cations, we make use of the global winner as well as a winner for every class. Our experiments yielded a high recognition rate of 99.25\% on NIST19 numeral database. 2001 Pattern Recognition Society. Published by Elsevier Science Ltd. All rights reserved.},
 	language = {en},
 	journal = {Pattern Recognition},
 	author = {Suganthan, P N},
@@ -547,6 +545,7 @@ author={Daniel J. Felleman and David C. Van Essen},
 year = {1991},
 booktitle={Cerebral Cortex}
 }
+
 @article{mountcastle_columnar_1997,
 	title = {The columnar organization of the neocortex},
 	volume = {120},
